force-app/main/default/objects/Candidate__c/fields/Conflict_Count__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Count__c</fullName>
    <label>Conflicts</label>
    <type>Summary</type>
    <summaryForeignKey>Fact__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Fact__c.Certainty__c</field>
        <operation>equals</operation>
        <value>Conflicting</value>
    </summaryFilterItems>
</CustomField>