force-app/main/default/objects/Candidate__c/fields/Missing_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_Count__c</fullName>
    <label>Missing Items</label>
    <type>Summary</type>
    <summaryForeignKey>Fact__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Fact__c.Certainty__c</field>
        <operation>equals</operation>
        <value>Missing</value>
    </summaryFilterItems>
</CustomField>