force-app/main/default/objects/Candidate__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>